2007-10-02  Lluis Sanchez Gual <lluis@novell.com> 

	* sv.po: Updated swedish translation by Daniel Nylander.

2007-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* gl.po: Updated translation by Ignacio Casal.
	* es.po: Updated translation by Andrés G. Aragoneses.

2007-09-25  Lluis Sanchez Gual <lluis@novell.com> 

	* it.po: Updated Italian translation by Milo Casagrande.

2007-09-21  Atsushi Enomoto  <atsushi@ximian.com>

	* POTFILES.in : fix for intltool-update: removed old
	  files and Updated AspNetAddin/Template/*.xml entries.
	* ja.po : updated.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* ca.po: Minor fixes.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* ca.po: Minor fixes.

2007-07-30  Lluis Sanchez Gual <lluis@novell.com> 

	* POTFILES.in: Removed old files.
	* po.mdp: Updated.

2007-07-30  Ankit Jain  <jankit@novell.com>

	* es.po: Update Spanish translation by Andrés G. Aragoneses.

2007-07-30  Ankit Jain  <jankit@novell.com>

	* it.po: Update Italian translation by Milo Casagrande.

2007-07-29  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* cs.po: Updated translation.

2007-07-25  Atsushi Enomoto  <atsushi@ximian.com>

	* ja.po : updated for the next release.

2007-07-20  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* POTFILES.in: Updated.

2007-07-20  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* pl.po: Fix typos.

2007-07-11  Ankit Jain  <jankit@novell.com>

	* de.po: Set "Revision-Date".
	* tr.po: Fix typo.

2007-07-11  Ankit Jain  <jankit@novell.com>

	* pt.po: Updated Portuguese (Portugal) translation by Vitor Hugo Barros.

2007-07-10  Atsushi Enomoto  <atsushi@ximian.com>

	* ja.po : looks like there is newer gettext requirement
	  header, Plural-Forms.

2007-07-10  Ankit Jain  <jankit@novell.com>

	* ja.po: Fix typos.
	* pl.po: Likewise.
	* tr.po: Likewise.

2007-06-29  Jacob Ilsø Christensen <jacobilsoe@gmail.com>

        * sv.po: Added Swedish translation (thank Daniel Nylander)
