@@ -312,33 +312,33 @@ Extras/MonoDevelop.WebReferences/gtk-gui/MonoDevelop.WebReferences.Dialogs.WebRe
 Extras/MonoDevelop.WebReferences/MonoDevelop.WebReferences.addin.xml
 Extras/MonoDevelop.WebReferences/MonoDevelop.WebReferences.NodeBuilders/WebReferenceFolderNodeBuilder.cs
 Extras/MonoDeveloperExtensions/MonoDeveloperExtensions.addin.xml
-Extras/MonoQuery/MonoQuery/Commands/Commands.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/AggregatesNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/ColumnNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/ColumnsNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/ConstraintNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/ConstraintsNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/GroupsNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/LanguagesNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/OperatorsNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/ParametersNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/ProcedureNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/ProceduresNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/ProviderCollectionNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/RolesNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/RulesNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/SequencesNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/TableNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/TablesNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/TriggersNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/TypesNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/UserNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/UsersNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/ViewNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/NodeBuilders/ViewsNodeBuilder.cs
-Extras/MonoQuery/MonoQuery/Gui/SqlQueryView.cs
-Extras/MonoQuery/MonoQuery/MonoQuery.addin.xml
-Extras/MonoQuery/MonoQuery/monoquery.glade
+Unused/MonoQuery/MonoQuery/Commands/Commands.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/AggregatesNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/ColumnNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/ColumnsNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/ConstraintNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/ConstraintsNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/GroupsNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/LanguagesNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/OperatorsNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/ParametersNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/ProcedureNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/ProceduresNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/ProviderCollectionNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/RolesNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/RulesNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/SequencesNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/TableNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/TablesNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/TriggersNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/TypesNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/UserNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/UsersNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/ViewNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/NodeBuilders/ViewsNodeBuilder.cs
+Unused/MonoQuery/MonoQuery/Gui/SqlQueryView.cs
+Unused/MonoQuery/MonoQuery/MonoQuery.addin.xml
+Unused/MonoQuery/MonoQuery/monoquery.glade
 Extras/NemerleBinding/EmptyNemerleFile.xft.xml
 Extras/NemerleBinding/Nemerle.glade
 Extras/NemerleBinding/NemerleBinding.addin.xml
